architecture de marché en cours

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -8,5 +8,8 @@
       "@@/*": ["./*"]
     }
   },
+  "vueCompilerOptions": {
+    "experimentalDisableTemplateSupport": true
+  },
   "exclude": ["node_modules", ".nuxt", "dist"]
 }
