--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^4.6.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.19.3",
+    "echarts": "^5.3.3",
     "feather-icons": "4",
     "nuxt": "^2.15.8",
     "randomstring": "^1.2.2",
