--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "echarts": "^5.3.3",
     "feather-icons": "4",
     "nuxt": "^2.15.8",
+    "quill-image-drop-module": "^1.0.3",
     "randomstring": "^1.2.2",
+    "tiptap-vuetify": "^2.24.0",
     "v-mask": "^2.3.0",
     "vue": "2",
     "vue-bootstrap4-table": "^1.1.11",
     "vue-feather": "1",
     "vue-gates": "^2.1.2",
+    "vue-quill-editor": "^3.0.6",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vue-unicons": "^3.3.1",
