--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vue-bootstrap4-table": "^1.1.11",
     "vue-feather": "1",
     "vue-gates": "^2.1.2",
+    "vue-imask": "^6.4.3",
     "vue-quill-editor": "^3.0.6",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
