générer facture d'equipement terminée

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -9,7 +9,7 @@
     }
   },
   "vueCompilerOptions": {
-    "experimentalDisableTemplateSupport": true,
+    "skipTemplateCodegen": true,
     "extensions": [".vue"],
     "target": 2
   },
