--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@nuxtjs/moment": "^1.6.1",
     "@nuxtjs/vuetify": "^1.12.3",
     "@vue/compiler-dom": "^3.2.41",
+    "@vue/runtime-dom": "^3.2.47",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^3.1.0",
