--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "feather-icons": "4",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.28",
+    "jspdf-invoice-template": "^1.4.3",
     "nuxt": "^2.15.8",
     "quill-image-drop-module": "^1.0.3",
     "tiptap-vuetify": "^2.24.0",
