assignation des emplacements et creéation de bordereaux en cours

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jspdf-invoice-template": "^1.4.3",
     "nuxt": "^2.15.8",
     "quill-image-drop-module": "^1.0.3",
+    "vee-validate": "3",
     "vue": "2",
     "vue-feather": "1",
     "vue-gates": "^2.1.2",
