--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@nuxtjs/auth-next": "5.0.0-1648802546.c9880dc",
     "@nuxtjs/axios": "^5.13.6",
+    "apexcharts": "^3.45.1",
     "bootstrap": "^4.6.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.19.3",
@@ -27,6 +28,7 @@
     "quill-image-drop-module": "^1.0.3",
     "vee-validate": "3",
     "vue": "2",
+    "vue-ellipse-progress": "^1.3.1",
     "vue-feather": "1",
     "vue-gates": "^2.1.2",
     "vue-imask": "^6.4.3",
@@ -49,6 +51,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "vue-apexcharts": "^1.6.2"
   }
 }
