--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vue-feather": "1",
     "vue-gates": "^2.1.2",
     "vue-imask": "^6.4.3",
+    "vue-laravel-errors": "^0.2.5",
     "vue-notification": "^1.3.20",
     "vue-quill-editor": "^3.0.6",
     "vue-server-renderer": "^2.6.14",
